--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   react:
     build: ../react/
     ports:
-      - "4000:4000"
+      - "5000:5000"
+    restart: always
 
   nginx:
     build: ../nginx/
-    ports:
-      - "8080:80"
     depends_on:
       - react
+    ports:
+      - "8080:80"
+    restart: always
