--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,38 +13,40 @@ services:
     image: simify_nginx:latest
     depends_on:
       - react
-      # - postgres
-      # - graphile
+      - postgres
+      - graphile
     ports:
-      - "8080:80"
+      - "8080:8080"
     restart: always
-  # postgres:
-  #   build: ../postgres/
-  #   image: simify_postgres:latest
-  #   ports:
-  #     - "5432:5432"
-  #   restart: always
-  #   environment:
-  #     POSTGRES_USER: postgres
-  #     POSTGRES_PASSWORD: secret
-  #     POSTGRES_DB: postgres
-  # graphile:
-  #   build: ../graphile/
-  #   image: simify_graphile:latest
-  #   depends_on:
-  #     - postgres
-  #   ports:
-  #     - "4000:4000"
-  #   restart: always
-  #   command:
-  #     [
-  #       "--connection",
-  #       "postgres://postgres:secret@postgres:5432/postgres",
-  #       "--host",
-  #       "0.0.0.0",
-  #       "--port",
-  #       "4000",
-  #       "--schema",
-  #       "api",
-  #       "--watch",
-  #     ]
+
+  postgres:
+    build: ../postgres/
+    image: simify_postgres:latest
+    ports:
+      - "5432:5432"
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: postgres
+
+  graphile:
+    build: ../graphile/
+    image: simify_graphile:latest
+    depends_on:
+      - postgres
+    ports:
+      - "4000:4000"
+    restart: always
+    command:
+      [
+        "--connection",
+        "postgres://postgres:secret@postgres:5432/postgres",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "4000",
+        "--schema",
+        "api",
+        "--watch",
+      ]
